@@ -4,6 +4,7 @@ Changelog
 1.9-dev (Unreleased)
 --------------------
 * removed duplicate title display in figure popus #4030 [vincisas]
+* use local copy of country logo if it is available so we can scale it #4029 [vincisas]
 
 1.8 - (2011-01-05)
 ------------------
